Add opening crawler to hover display

--- a/film-list/film-list.template.html
+++ b/film-list/film-list.template.html
@@ -42,6 +42,7 @@
                     <li><strong>Producer: </strong>{{film.producer}}</li>
                     <li><strong>Release : </strong>{{film.release_date}}</li>
                 </ul>
+                <p>{{film.opening_crawl}}</p>
             </span>
             <div class="caption">
                 <h3>#{{film.episode_id}} {{film.title}}</h3>
