Restructure & add new functionality to display film detail

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
     <!-- main app module -->
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
-    <!-- film-list module & component -->
+    <script src="film.service.js"></script>
+
+    <!-- film-list module & controller -->
     <script src="film-list/film-list.module.js"></script>
-    <script src="film-list/film-list.component.js"></script>
+    <script src="film-list/film-list.controller.js"></script>
+    <script src="film-list/film-list-overview.directive.js"></script>
+    <!-- film-detail module & controller -->
+    <script src="film-detail/film-detail.module.js"></script>
+    <script src="film-detail/film-detail.controller.js"></script>
 </head>
 <body>
     <div ng-include="'partials/header.html'"></div>
