--- a/film-list/film-list.template.html
+++ b/film-list/film-list.template.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12 col-md-6">
         <div class="input-group">
             <span class="input-group-addon" id="basic-addon3">Search Film: </span>
-            <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" placeholder="e.g: The Force Awakens" ng-model="$ctrl.query">
+            <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" placeholder="e.g: The Force Awakens" ng-model="query">
         </div>
     </div>
     <div class="col-xs-12 col-md-6">
@@ -13,7 +13,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="input-group">
                     <span class="input-group-addon">Sort By: </span>
-                    <select class="form-control" ng-model="$ctrl.sortType">
+                    <select class="form-control" ng-model="sortType">
                         <option value="title">Title</option>
                         <option value="episode_id">Episode ID</option>
                     </select>
@@ -22,8 +22,8 @@
             <div class="col-xs-12 col-md-6">
                 <div class="input-group">
                     <span class="input-group-addon">Order:
-                        <input type="radio" ng-model="$ctrl.sortOrder" ng-value="false"> Ascending
-                        <input type="radio" ng-model="$ctrl.sortOrder" ng-value="true"> Descending
+                        <input type="radio" ng-model="sortOrder" ng-value="false"> Ascending
+                        <input type="radio" ng-model="sortOrder" ng-value="true"> Descending
                     </span>
                 </div>
             </div>
@@ -33,21 +33,15 @@
 
 <!-- Display Films -->
 <div class="row">
-    <div class="col-xs-12 col-md-6 col-lg-4 repeated-item" ng-repeat="film in $ctrl.films | filter: {title:$ctrl.query} | orderBy:$ctrl.sortType:$ctrl.sortOrder">
-        <div class="thumbnail film">
-            <img src="images/icon.png">
-            <span>
-                <ul>
-                    <li><strong>Director: </strong>{{film.director}}</li>
-                    <li><strong>Producer: </strong>{{film.producer}}</li>
-                    <li><strong>Release : </strong>{{film.release_date}}</li>
-                </ul>
-                <p>{{film.opening_crawl}}</p>
-            </span>
-            <div class="caption">
-                <h3>#{{film.episode_id}} {{film.title}}</h3>
+    <div class="col-xs-12 col-md-6 col-lg-4 repeated-item" ng-repeat="film in films | filter: {title:query} | orderBy:sortType:sortOrder">
+            <div class="thumbnail film" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()" ng-click="getFilmUrl(film.url)">
+                <img src="images/icon.png">
+                <film-overview class="overview" film="film" ng-show="onHover"></film-overview>
+                <div class="caption">
+                    <h3>#{{film.episode_id}} {{film.title}}</h3>
+                </div>
             </div>
-        </div>   
     </div>
 </div>
 <!-- EOF -->
+
